second section done (with stats)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 		<title>MOGO</title>
 </head>
 <body>
@@ -46,8 +46,67 @@
 					<div class="slider__item"><span class="slider__numb">04</span> contacts
 					</div> 
 				</div>
-			</div>
+			</div> 
+		</div>
+	</div>
 
+	<section class="section">
+		<div class="container">
+
+			<div class="section__header">
+				<h3 class="section__suptitle">What we do</h3>
+				<h2 class="section__title">Story about us</h2>
+				<div class="section__text ">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias aliquam tempora repellendus placeat laborum minus, minima libero atque excepturi ipsa. Obcaecati in esse optio consequatur magni cum dolor molestiae!</p>
+				</div>
+			</div>
+			<div class="about">
+				<div class="about__item">
+					<div class="about__img">
+						<img src="assets/images/mac_tablet.png" alt="">
+					</div>
+					<div class="about__text">super team</div>
+				</div>
+
+				<div class="about__item">
+					<div class="about__img">
+						<img  src="assets/images/headphones.png" alt="">
+					</div>
+					<div class="about__text">super team</div>
+				</div>
+				<div class="about__item">
+					<div class="about__img">
+						<img src="assets/images/office_flower.png" alt="">
+					</div>
+					<div class="about__text">super team</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="statistics">
+		<div class="container">
+			<div class="stat">
+				<div class="stat__item">
+					<div class="stat__count">42</div>
+					<div class="stat__text">web design projects</div>
+				</div>
+				<div class="stat__item">
+					<div class="stat__count">123</div>
+					<div class="stat__text">happy client</div>
+				</div>
+				<div class="stat__item">
+					<div class="stat__count">15</div>
+					<div class="stat__text">award winner</div>
+				</div>
+				<div class="stat__item">
+					<div class="stat__count">99</div>
+					<div class="stat__text">cup of coffee</div>
+				</div>
+				<div class="stat__item">
+					<div class="stat__count">24</div>
+					<div class="stat__text">members</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
