--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
-		<title>MOGO</title>
+	<title>MOGO</title>
 </head>
 <body>
 
@@ -109,6 +109,70 @@
 			</div>
 		</div>
 	</div>
+
+	<section class="section">
+		<div class="container">
+			<div class="section__header">
+				<h3 class="section__suptitle">We work with</h3>
+				<h2 class="section__title">Amazing services</h2>
+			</div>
+			<div class="services">
+				<div class="services__item">
+					<img class="services__icon" src="assets/images/photography.png" alt="">
+					<div class="services__title">Photography</div>
+					<div class="services__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+				</div>
+				<div class="services__item">
+					<img class="services__icon" src="assets/images/web_design.png" alt="">
+					<div class="services__title">Web design</div>
+					<div class="services__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+				</div>
+				<div class="services__item">
+					<img class="services__icon" src="assets/images/creativity.png" alt="">
+					<div class="services__title">Creativity</div>
+					<div class="services__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+				</div>
+			</div>
+
+			<hr>
+
+			<div class="services">
+				<div class="services__item">
+					<img class="services__icon" src="assets/images/seo.png" alt="">
+					<div class="services__title">Seo</div>
+					<div class="services__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+				</div>
+				<div class="services__item">
+					<img class="services__icon" src="assets/images/css_html.png" alt="">
+					<div class="services__title">css/html</div>
+					<div class="services__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+				</div>
+				<div class="services__item">
+					<img class="services__icon" src="assets/images/digital.png" alt="">
+					<div class="services__title">Digital</div>
+					<div class="services__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+</section>
+
+	<section class="section section--devices">
+		<div class="container">
+			<div class="section__header">
+				<h3 class="section__suptitle">For all devices</h3>
+				<h2 class="section__title">Unique design</h2>
+			</div>
+			<div class="devices">
+				<img class="devices__item" src="assets/images/ipad.png" alt="">
+				<img class="devices__item devices__item--iphone" src="assets/images/iphone.png" alt="">
+			</div>
+		</div>
+
+	</section>
+
+
 </body>
 </html>
 
