--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 	<title>MOGO</title>
 </head>
 <body>
@@ -169,9 +169,62 @@
 				<img class="devices__item devices__item--iphone" src="assets/images/iphone.png" alt="">
 			</div>
 		</div>
-
 	</section>
-
+	<section class="section">
+		<div class="container">
+			<div class="section__header">
+				<h3 class="section__suptitle">Service</h3>
+				<h2 class="section__title">What we do</h2>
+				<div class="section__text ">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias aliquam tempora repellendus placeat laborum minus, minima libero atque excepturi ipsa. Obcaecati in esse optio consequatur magni cum dolor molestiae!</p>
+				</div>
+			</div>
+			<div class="wedo">
+				<div class="wedo__item">
+					<img src="assets/images/whatwedo.png" alt="">
+				</div>
+				<div class="wedo__item">
+					
+					<div class="accordion">
+						<div class="accordion__item active">
+							<div class="accordion__header">
+								<img class="accordion__icon" src="assets/images/photo_icon.png " alt="">
+								<div class="accordion__title">Photography</div>
+							</div>
+							<div class="accordion__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam blanditiis enim ab harum quibusdam? Voluptas eaque in quidem iure tenetur sequi, consequatur, optio animi accusamus est, ipsum eos, quisquam explicabo.Aliquam blanditiis enim ab harum quibusdam? Voluptas eaque in quidem iure tenetur sequi, consequatur, optio animi accusamus est, ipsum eos, quisquam explicabo.</div>
+						</div>
+						<div class="accordion__item">
+							<div class="accordion__header">
+								<img class="accordion__icon" src="assets/images/creativity_icon.png " alt="">
+								<div class="accordion__title">Creativity</div>
+							</div>
+							<div class="accordion__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam blanditiis enim ab harum quibusdam? Voluptas eaque in quidem iure tenetur sequi, consequatur, optio animi accusamus est, ipsum eos, quisquam explicabo.</div>
+						</div>
+						<div class="accordion__item">
+							<div class="accordion__header">
+								<img class="accordion__icon" src="assets/images/webdis_icon.png" alt="">
+								<div class="accordion__title">Web design</div>
+							</div>
+							<div class="accordion__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam blanditiis enim ab harum quibusdam? Voluptas eaque in quidem iure tenetur sequi, consequatur, optio animi accusamus est, ipsum eos, quisquam explicabo.</div>
+						</div>
+					</div>
+				</div><!-- /wedo__item -->
+			</div> <!-- /wedo -->
+		</div>
+	</section>
+	<div class="section section--gray">
+		<div class="container">
+			<div class="reviews">
+				<a href="#" class="reviews__btn reviews__btn--prev">prev</a>
+				<a href="#" class="reviews__btn reviews__btn--next">next</a>
+				<div class="reviews__item">
+					<img class="reviews__photo" src="assets/images/reviews_photo.jpg" alt="">
+					<div class="reviews__text">"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur fuga eum, quas, ullam corporis adipisci omnis est rerum, illo reprehenderit numquam?" </div>
+					<div class="reviews__author">John Doe </div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
