team section almost done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/bb47f28c3d.js" crossorigin="anonymous"></script>
 	<title>MOGO</title>
 </head>
 <body>
@@ -60,25 +61,25 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias aliquam tempora repellendus placeat laborum minus, minima libero atque excepturi ipsa. Obcaecati in esse optio consequatur magni cum dolor molestiae!</p>
 				</div>
 			</div>
-			<div class="about">
-				<div class="about__item">
-					<div class="about__img">
+			<div class="card">
+				<div class="card__item"> 
+					<div class="card__img">
 						<img src="assets/images/mac_tablet.png" alt="">
 					</div>
-					<div class="about__text">super team</div>
+					<div class="card__text">super team</div>
 				</div>
 
-				<div class="about__item">
-					<div class="about__img">
+				<div class="card__item">
+					<div class="card__img">
 						<img  src="assets/images/headphones.png" alt="">
 					</div>
-					<div class="about__text">super team</div>
+					<div class="card__text">super team</div>
 				</div>
-				<div class="about__item">
-					<div class="about__img">
+				<div class="card__item">
+					<div class="card__img">
 						<img src="assets/images/office_flower.png" alt="">
 					</div>
-					<div class="about__text">super team</div>
+					<div class="card__text">super team</div>
 				</div>
 			</div>
 		</div>
@@ -225,7 +226,87 @@
 			</div>
 		</div>
 	</div>
+	<section class="section">
+		<div class="container">
+			<div class="section__header">
+				<h3 class="section__suptitle">Who we are</h3>
+				<h2 class="section__title">Meet our team</h2>
+				<div class="section__text ">
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis alias aliquam tempora repellendus placeat laborum minus, minima libero atque excepturi ipsa. Obcaecati in esse optio consequatur magni cum dolor molestiae!</p>
+				</div>
+			</div>
 
+
+			<div class="card">
+				<div class="card__item">
+					<div class="card__img">
+						<img src="assets/images/matthew.png" alt="">
+					</div>
+					<div class="card__text">
+						<div class="social">
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-facebook-f"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-twitter"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-pinterest-p"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-instagram-square"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="card__item">
+					<div class="card__img">
+						<img  src="assets/images/christopher.png" alt="">
+					</div>
+					<div class="card__text">
+						<div class="social">
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-facebook-f"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-twitter"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-pinterest-p"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-instagram-square"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="card__item">
+					<div class="card__img">
+						<img src="assets/images/michael.png" alt="">
+					</div>
+					<div class="card__text">
+						<div class="social">
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-facebook-f"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-twitter"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-pinterest-p"></i>
+							</a>
+							<a class="social__item" href="#" target="_blank">
+								<i class="fa-brands fa-instagram-square"></i>
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+	</section>
 </body>
 </html>
 
